# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.18.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- XML output was implemented by
	  Bob Shaffer II <bob.shaffer.2 at gmail.com>
	  Thanks for the contribution.
	- Introduce runtime variables in format-string:
	  Now the format-string is almost a programming language;
	  without loops or recursion, but one can loop over versions:
	- Finally, dump the mess with available*/best*/installed*/empty*/full*
	  and the distinction of printable and "test-only" properties.
	  Instead of the flood of variations of properties for version output
	  there are now essentially only two properties with slight variations:
	  <availableversions:VAR> <installedversions:VAR>
	  They interpret the variable VAR for each version as a format.
	  Special properties like {last} are available in VAR to ease writing
	  separators between versions or in special cases.
	  Special care has been taken to parse VAR only once so that
	  eix should not be dramatically slower after this change.
	  Of course, a slight loss in the output speed was unavoidable, but
	  this should be worth the gained flexibility and especially the
	  simplification of writing formats.
	- For the previous empty*/full* use cases there are now example
	  variables NAMEVERSIONS, EQNAMEVERSION, NAMESLOT, ANAMEASLOT,
	  and ANAMESLOT; see eix --dump for further details on these.
	  To see the effect of such an example try e.g.
	  eix --format '<availableversions:ANAMESLOT:ANAMESLOT>' '-*' gcc
	- Let = in conditionals work as documented (a long outstanding bug).
	- The --versionlines cases are now completely shifted to the formats.
	- Many variables like PRINT_IUSE, TAG_FOR_* etc. would now be
	  superfluous, since the format can now directly be modified.
	  Some of these variables thus have been either removed, but for
	  backward compatibility and "simple" modifications, most of them
	  are still honored by means of delayed substitutions in the formats.