@@ -1,5 +1,12 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.18.1
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Allow also properties and variable names on the right-hand side
+	  of comparisons or runtime variable assignments.
+	- Fix possible overflow in string assignment/comparison.
+	- Improve parsing of <*:*>.
+
 *eix-0.18.0
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- XML output was implemented by
